--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* NAVIGATION BAR */
+.nav-container{
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font: 30px Sans-serif;
+  color: #FF335B;
+  display: flex;
+  margin: 15px;
+}
+.left-nav{
+  width: 50%;
+}
+.right-nav{
+  width: 50%;
+  text-align: right;
+  margin-right: 25px;
+}
+.right-nav Button{
+  background-color: #FF335B;
+}
+.right-nav Button:hover{
+  background-color: #FF335B;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
